SEO / Performance Optimisations
- Move external CSS into one file
- Compress images more

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>automise</title>
-        <meta name="description" content="">
+        <title>Automise | Dashboards for your business, custom software that works the way you do</title>
+        <meta name="description" content="We build dashboards that let you see exactly what’s going on in your business. We make custom software that works the way your business does. Let’s chat!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="build/css/style.min.css">
     </head>
     <body>
@@ -68,21 +65,21 @@
                         <div class="row">
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/linegraph.svg" width="70" />
+                                    <img src="build/img/linegraph.svg" width="70" alt="Increase Productivity"/>
                                 </div>
                                 <h4>Increase Productivity</h4>
                                 <p>Remove the waste in your existing processes and focus on what matters.  We'll work with you to analyse how you currently work, and where technology can fill in some of the gaps.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/layers.svg" width="50" />
+                                    <img src="build/img/layers.svg" width="50" alt="Modular Build"/>
                                 </div>
                                 <h4>Modular Build</h4>
                                 <p>We build systems that grow with your business, that can change gear as you do.  This means you can add features as you need them and have control over the cost of each phase.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/expand.svg" width="50" />
+                                    <img src="build/img/expand.svg" width="50" alt="Fully Responsive"/>
                                 </div>
                                 <h4>Fully Responsive</h4>
                                 <p>Our systems work how you work, on the devices you use.  See your business come alive in the palm of your hand.  Our products look great, especially on smartphones and tablets.</p>
@@ -91,21 +88,21 @@
                         <div class="row">
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/speedometer.svg" width="50" />
+                                    <img src="build/img/speedometer.svg" width="50" alt="Custom Dashboards"/>
                                 </div>
                                 <h4>Custom Dashboards</h4>
                                 <p>Manage your business more effectively by seeing the numbers that matter to you.  We'll help you build a realtime view of what's going on and create visually-appealing reports. </p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/mobile.svg" width="50" />
+                                    <img src="build/img/mobile.svg" width="50" alt="Mobile Applications"/>
                                 </div>
                                 <h4>Mobile Applications</h4>
                                 <p>Update the way you work.  Don't waste time writing notes by hand or entering information into different systems. Use your mobile devices to enter the information you need just once.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/lightbulb.svg" width="40" />
+                                    <img src="build/img/lightbulb.svg" width="40" alt="Unlock Potential"/>
                                 </div>
                                 <h4>Unlock Potential</h4>
                                 <p>We'll take your ideas and quickly turn them into reality.  With our experience and your expertise, together we can transform how you work and future-proof your business.</p>
@@ -156,7 +153,7 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6">
-                            <a href="http://www.payzip.co.uk" alt="PayZip" target="_BLANK"><img src="build/img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
+                            <a href="http://www.payzip.co.uk" title="PayZip" target="_BLANK"><img src="build/img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
                             <h3>Payment Solutions</h3>
@@ -180,7 +177,7 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6 col-md-push-6">
-                            <a href="http://bidstar.co.uk" alt="Bidstar" target="_BLANK">
+                            <a href="http://bidstar.co.uk" title="Bidstar" target="_BLANK">
                                 <img src="build/img/bidstar-image.png" alt="Bidstar" style='width: 100%; display: block; margin: 0 auto;'>
                             </a>
                         </div>
@@ -212,7 +209,7 @@
                             <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="simon-bg">
-                                        <img src="build/img/simon-face.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/simon-face.png" width="50%" style="visibility: hidden" alt="Simon"/>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -223,7 +220,7 @@
                             <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="jay-bg">
-                                        <img src="build/img/jay-face.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/jay-face.png" width="50%" style="visibility: hidden" alt="Jay"/>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -234,7 +231,7 @@
                             <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="luke-bg">
-                                        <img src="build/img/luke-face.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/luke-face.png" width="50%" style="visibility: hidden" alt="Luke"/>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -245,7 +242,7 @@
                             <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="dan-bg">
-                                        <img src="build/img/dan-face.png" width="50%" style="visibility: hidden;" />
+                                        <img src="build/img/dan-face.png" width="50%" style="visibility: hidden;" alt="Dan"/>
                                     </div>
                                 </div>
                                 <div class="text">
@@ -278,7 +275,7 @@
                             <div class="col-md-3 col-md-offset-3">
                                 <div class="contact-item">
                                     <div class="contact-icon">
-                                        <i class="icon icon_mail"></i>
+                                        <i class="icon icon_mail">&nbsp;</i>
                                     </div>
                                 </div>
                             </div>
@@ -293,7 +290,6 @@
                             <div class="col-md-12">
                                 <p class="footer-copy">© 2016 PayZip Limited. Automise is a trading style of PayZip Limited, 167 Broadway, Cardiff CF24 1QH.</p>
                                 <p class='footer-copy no-margin'>Registered in England &amp; Wales No. 07334100</p>
-                                <ul />
                             </div>
                         </div>
                     </div>
