--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Wed May 01 2019 16:21:11 GMT+0000 (UTC)  -->
-<html data-wf-page="5cb83fc9b2c69017b0a16ea1" data-wf-site="5cb83fc9b2c690523da16ea3">
+<html lang="en" data-wf-page="5cb83fc9b2c69017b0a16ea1" data-wf-site="5cb83fc9b2c690523da16ea3">
 <head>
   <meta charset="utf-8">
   <title>Automise - Automate workflows, optimise productivity</title>
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div data-collapse="none" data-animation="default" data-duration="400" class="navbar white w-nav">
-    <div class="w-container"><a href="index.html" class="logo-block w-nav-brand w--current"><img src="images/Automise-Header-v2.png" alt="" class="logo fixed"></a></div>
+    <div class="w-container"><a href="index.html" class="logo-block w-nav-brand w--current"><img src="images/Automise-Header-v2.png" alt="Automise header" class="logo fixed"></a></div>
   </div>
   <div class="image-hero busines-2">
     <div class="hero-block-overlay business-2">
@@ -223,7 +223,7 @@
       </div>
     </div>
   </div>
-  <div id="intro" class="section feature-section">
+  <div id="payzip" class="section feature-section">
     <div class="container w-container">
         <picture>
             <source srcset="images/webp/MacBook-Pro-Webflow.webp" type="image/webp" class="browser-mockup-right">
@@ -236,7 +236,7 @@
         <p class="paragraph-3">We built PayZip to simplify member payments for clubs, societies and not-for-profits. We&#x27;re currently helping to revolutionise payments administration for a handful of leading sports organisations.<br><br>We can also integrate online payment solutions into your systems, such as Stripe, Braintree, PayPal and GoCardless.</p><a href="https://payzip.co.uk/" target="_blank" class="button cta-button white left w-button">visit website</a></div>
     </div>
   </div>
-  <div class="section feature-section odd">
+  <div id="smarttracker" class="section feature-section odd">
     <div class="container w-container">
         <picture>
             <source srcset="images/webp/iPad--iPhone-SmartTracker.webp" type="image/webp" class="browser-mockup-left">
@@ -249,7 +249,7 @@
         <p class="paragraph-4">We built SmartTracker, a beautifully simple goal tracker with forecasts.<br><br>Enter data daily, weekly or monthly to track and forecast sales targets, saving goals, money raised, miles run, steps taken or calories burned over a set period of time and get feedback about what is needed to hit (or smash through) your goals.</p><a href="https://smarttracker.io/" target="_blank" class="button cta-button white left w-button">visit website</a></div>
     </div>
   </div>
-  <div id="intro" class="section feature-section">
+  <div id="bidstar" class="section feature-section">
     <div class="container w-container">
         <picture>
             <source srcset="images/webp/Bidstar-MBP--iPhone.webp" type="image/webp" class="browser-mockup-right">
