Adds rel="noopener" to external links, best practice.

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <div class="feature-text-block">
         <div class="feature-intro-title">payzip</div>
         <h2 class="main-feature-title">Payment solutions</h2>
-        <p class="paragraph-3">We built PayZip to simplify member payments for clubs, societies and not-for-profits. We&#x27;re currently helping to revolutionise payments administration for a handful of leading sports organisations.<br><br>We can also integrate online payment solutions into your systems, such as Stripe, Braintree, PayPal and GoCardless.</p><a href="https://payzip.co.uk/" target="_blank" class="button cta-button white left w-button">visit website</a></div>
+        <p class="paragraph-3">We built PayZip to simplify member payments for clubs, societies and not-for-profits. We&#x27;re currently helping to revolutionise payments administration for a handful of leading sports organisations.<br><br>We can also integrate online payment solutions into your systems, such as Stripe, Braintree, PayPal and GoCardless.</p><a href="https://payzip.co.uk/" rel="noopener" target="_blank" class="button cta-button white left w-button">visit website</a></div>
     </div>
   </div>
   <div id="smarttracker" class="section feature-section odd">
@@ -246,7 +246,7 @@
       <div class="feature-text-block right">
         <div class="feature-intro-title">smarttracker</div>
         <h2 class="main-feature-title">Native iOS applications</h2>
-        <p class="paragraph-4">We built SmartTracker, a beautifully simple goal tracker with forecasts.<br><br>Enter data daily, weekly or monthly to track and forecast sales targets, saving goals, money raised, miles run, steps taken or calories burned over a set period of time and get feedback about what is needed to hit (or smash through) your goals.</p><a href="https://smarttracker.io/" target="_blank" class="button cta-button white left w-button">visit website</a></div>
+        <p class="paragraph-4">We built SmartTracker, a beautifully simple goal tracker with forecasts.<br><br>Enter data daily, weekly or monthly to track and forecast sales targets, saving goals, money raised, miles run, steps taken or calories burned over a set period of time and get feedback about what is needed to hit (or smash through) your goals.</p><a href="https://smarttracker.io/" rel="noopener" target="_blank" class="button cta-button white left w-button">visit website</a></div>
     </div>
   </div>
   <div id="bidstar" class="section feature-section">
@@ -259,7 +259,7 @@
       <div class="feature-text-block">
         <div class="feature-intro-title">bidstar</div>
         <h2 class="main-feature-title">Web applications</h2>
-        <p class="paragraph-3">We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.<br><br>We can help you build a cloud-based web application that runs on all devices, giving you valuable insight into your business.</p><a href="http://bidstar.co.uk/" target="_blank" class="button cta-button white left w-button">visit website</a></div>
+        <p class="paragraph-3">We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.<br><br>We can help you build a cloud-based web application that runs on all devices, giving you valuable insight into your business.</p><a href="http://bidstar.co.uk/" rel="noopener" target="_blank" class="button cta-button white left w-button">visit website</a></div>
     </div>
   </div>
   <div class="section blue-cta-section">
@@ -271,19 +271,19 @@
       <div class="footer-row white-footer-row w-row">
         <div class="white-footer-column w-col w-col-3">
           <div class="footer-contact-info-block">
-            <p class="paragraph">167 Broadway<br>Cardiff<br>CF24 1QH<br><a href="mailto:hello@automise.co.uk" class="link">hello@automise.co.uk</a><a href="#"></a></p>
+            <p class="paragraph">167 Broadway<br>Cardiff<br>CF24 1QH<br><a href="mailto:hello@automise.co.uk" class="link">hello@automise.co.uk</a></p>
           </div>
         </div>
         <div class="white-footer-column w-col w-col-3"></div>
         <div class="white-footer-column w-col w-col-3"></div>
         <div class="white-footer-column w-col w-col-3">
-          <div class="dark-footer-title">Follow us</div><a href="http://www.facebook.com/PayZip/" target="_blank" class="color-social-button w-inline-block">
+          <div class="dark-footer-title">Follow us</div><a href="http://www.facebook.com/PayZip/" rel="noopener" target="_blank" class="color-social-button w-inline-block">
             <picture>
                 <source srcset="images/webp/Icon-facebook.webp" type="image/webp" class="footer-small-social-icon">
                 <source srcset="images/Icon-facebook.png" type="image/jpeg" class="footer-small-social-icon">
                 <img src="images/Icon-facebook.png" alt="Facebook icon" class="footer-small-social-icon">
             </picture>
-            </a><a href="http://www.twitter.com/payzip" target="_blank" class="color-social-button twitter w-inline-block">
+            </a><a href="http://www.twitter.com/payzip" rel="noopener" target="_blank" class="color-social-button twitter w-inline-block">
             <picture>
                 <source srcset="images/webp/Icon-twitter.webp" type="image/webp" class="footer-small-social-icon">
                 <source srcset="images/Icon-twitter.png" type="image/jpeg" class="footer-small-social-icon">
