Adds "intro" div id, so "learn more" button works again

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p data-ix="fade-in-on-load-2" class="overall-hero-description">We build bespoke software systems of all shapes and sizes. </p><a href="#intro" data-ix="fade-in-on-load-3" class="button outline w-button">Learn more</a><a href="mailto:hello@automise.co.uk" data-ix="fade-in-on-load-3" class="button outline solid w-button">say hello</a></div>
     </div>
   </div>
-  <div class="section tint">
+  <div class="section tint" id ="intro">
     <div class="container w-container">
       <div class="section-title-wrapper small-title">
         <div class="small-section-title">some companies we&#x27;ve helped</div>
@@ -226,9 +226,9 @@
   <div id="payzip" class="section feature-section">
     <div class="container w-container">
         <picture>
-            <source srcset="images/webp/MacBook-Pro-Webflow.webp" type="image/webp" class="browser-mockup-right">
-            <source srcset="images/MacBook-Pro-Webflow.png" type="image/jpeg" class="browser-mockup-right">
-            <img src="images/MacBook-Pro-Webflow.png" alt="MacBook Pro image" class="browser-mockup-right">
+            <source srcset="images/webp/MacBook-Pro-Webflow.webp" loading="lazy" type="image/webp" class="browser-mockup-right">
+            <source srcset="images/MacBook-Pro-Webflow.png" loading="lazy" type="image/jpeg" class="browser-mockup-right">
+            <img src="images/MacBook-Pro-Webflow.png" loading="lazy" alt="MacBook Pro image" class="browser-mockup-right">
         </picture>
       <div class="feature-text-block">
         <div class="feature-intro-title">payzip</div>
@@ -239,9 +239,9 @@
   <div id="smarttracker" class="section feature-section odd">
     <div class="container w-container">
         <picture>
-            <source srcset="images/webp/iPad--iPhone-SmartTracker.webp" type="image/webp" class="browser-mockup-left">
-            <source srcset="images/iPad--iPhone-SmartTracker.png" type="image/jpeg" class="browser-mockup-left">
-            <img src="images/iPad--iPhone-SmartTracker.png" alt="SmartTracker app screenshot" class="browser-mockup-left">
+            <source srcset="images/webp/iPad--iPhone-SmartTracker.webp" loading="lazy" type="image/webp" class="browser-mockup-left">
+            <source srcset="images/iPad--iPhone-SmartTracker.png" loading="lazy" type="image/jpeg" class="browser-mockup-left">
+            <img src="images/iPad--iPhone-SmartTracker.png" loading="lazy" alt="SmartTracker app screenshot" class="browser-mockup-left">
         </picture>
       <div class="feature-text-block right">
         <div class="feature-intro-title">smarttracker</div>
@@ -252,9 +252,9 @@
   <div id="bidstar" class="section feature-section">
     <div class="container w-container">
         <picture>
-            <source srcset="images/webp/Bidstar-MBP--iPhone.webp" type="image/webp" class="browser-mockup-right">
-            <source srcset="images/Bidstar-MBP--iPhone.png" type="image/jpeg" class="browser-mockup-right">
-            <img src="images/Bidstar-MBP--iPhone.png" alt="Bidstar app screenshot" class="browser-mockup-right">
+            <source srcset="images/webp/Bidstar-MBP--iPhone.webp" loading="lazy" type="image/webp" class="browser-mockup-right">
+            <source srcset="images/Bidstar-MBP--iPhone.png" loading="lazy" type="image/jpeg" class="browser-mockup-right">
+            <img src="images/Bidstar-MBP--iPhone.png" loading="lazy" alt="Bidstar app screenshot" class="browser-mockup-right">
         </picture>
       <div class="feature-text-block">
         <div class="feature-intro-title">bidstar</div>
